sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__base_3_sample_4_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
description: Strategy HiddenSingles executed on grid base_3_sample_4_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │   3 ║  23 │  2  │  23 ║     │     │     ║
    - ║  5  │  9  │     ║   6 │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │ 1   │ 1 3 ║     │ 12  │ 123 ║     │  2  │     ║
    - ║ 4 6 │ 4 6 │ 4   ║  9  │  5  │   6 ║  56 │   6 │  8  ║
    - ║     │     │     ║     │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │     ║
    - ║ 4 6 │  7  │  2  ║ 456 │  5  │   6 ║  56 │  3  │  5  ║
    - ║     │     │     ║     │  8  │  8  ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1   │ 1 3 ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  56 │     ║  56 │  4  │   6 ║  2  │  9  │     ║
    - ║     │     │     ║     │     │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │ 1   │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │     │  6  ║
    - ║   9 │     │   9 ║     │     │   9 ║     │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │  2  ║   3 │     │   3 ║
    - ║  8  │ 4 6 │ 4   ║  1  │  7  │   6 ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │   9 ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │     │     ║     │     │     ║   3 │ 1   │     ║
    - ║     │     │  5  ║  7  │  6  │  4  ║     │     │  9  ║
    - ║     │  8  │     ║     │     │     ║     │  8  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │ 12  │     ║     │ 1   │ 1   ║
    - ║ 4   │  3  │  6  ║     │     │  5  ║ 4   │     │ 4   ║
    - ║   9 │     │     ║     │   9 │     ║ 7   │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │   3 ║   3 │     │     ║
    - ║  1  │ 4   │ 4   ║  8  │     │     ║ 456 │   6 │  2  ║
    - ║     │     │ 7 9 ║     │   9 │   9 ║ 7   │ 7   │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c2: set value 8, because of: r0c2: candidate 8"
    - "r0c3: set value 3, because of: r0c3: candidate 3"
    - "r1c0: set value 3, because of: r1c0: candidate 3"
    - "r1c5: set value 7, because of: r1c5: candidate 7"
    - "r1c7: set value 2, because of: r1c7: candidate 2"
    - "r2c3: set value 4, because of: r2c3: candidate 4"
    - "r2c6: set value 9, because of: r2c6: candidate 9"
    - "r2c8: set value 5, because of: r2c8: candidate 5"
    - "r3c1: set value 5, because of: r3c1: candidate 5"
    - "r3c5: set value 8, because of: r3c5: candidate 8"
    - "r4c3: set value 5, because of: r4c3: candidate 5"
    - "r4c7: set value 7, because of: r4c7: candidate 7"
    - "r5c5: set value 2, because of: r5c5: candidate 2"
    - "r6c0: set value 2, because of: r6c0: candidate 2"
    - "r6c1: set value 8, because of: r6c1: candidate 8"
    - "r6c6: set value 3, because of: r6c6: candidate 3"
    - "r6c7: set value 1, because of: r6c7: candidate 1"
    - "r7c4: set value 1, because of: r7c4: candidate 1"
    - "r7c7: set value 8, because of: r7c7: candidate 8"
    - "r8c2: set value 7, because of: r8c2: candidate 7"
    - "r8c5: set value 3, because of: r8c5: candidate 3"
    - "r8c6: set value 5, because of: r8c6: candidate 5"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │  2  │     ║     │     │     ║
    - ║  5  │  9  │  8  ║  3  │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │ 1   ║     │     │     ║     │     │     ║
    - ║  3  │ 4 6 │ 4   ║  9  │  5  │  7  ║   6 │  2  │  8  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║     │     │     ║
    - ║   6 │  7  │  2  ║  4  │     │   6 ║  9  │  3  │  5  ║
    - ║     │     │     ║     │  8  │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │ 1 3 ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  5  │     ║   6 │  4  │  8  ║  2  │  9  │     ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │     │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │  7  │  6  ║
    - ║   9 │     │   9 ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │     ║     │     │   3 ║
    - ║  8  │ 4 6 │ 4   ║  1  │  7  │  2  ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  2  │  8  │  5  ║  7  │  6  │  4  ║  3  │  1  │  9  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║  2  │     │     ║     │     │     ║
    - ║ 4   │  3  │  6  ║     │  1  │  5  ║ 4   │  8  │ 4   ║
    - ║   9 │     │     ║     │     │     ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │ 4   │  7  ║  8  │     │  3  ║  5  │   6 │  2  ║
    - ║     │     │     ║     │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 2
        candidates:
          - 8
    actions:
      - position:
          row: 0
          column: 2
        setValue: 8
  - reasons:
      - position:
          row: 0
          column: 3
        candidates:
          - 3
    actions:
      - position:
          row: 0
          column: 3
        setValue: 3
  - reasons:
      - position:
          row: 1
          column: 0
        candidates:
          - 3
    actions:
      - position:
          row: 1
          column: 0
        setValue: 3
  - reasons:
      - position:
          row: 1
          column: 5
        candidates:
          - 7
    actions:
      - position:
          row: 1
          column: 5
        setValue: 7
  - reasons:
      - position:
          row: 1
          column: 7
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 7
        setValue: 2
  - reasons:
      - position:
          row: 2
          column: 3
        candidates:
          - 4
    actions:
      - position:
          row: 2
          column: 3
        setValue: 4
  - reasons:
      - position:
          row: 2
          column: 6
        candidates:
          - 9
    actions:
      - position:
          row: 2
          column: 6
        setValue: 9
  - reasons:
      - position:
          row: 2
          column: 8
        candidates:
          - 5
    actions:
      - position:
          row: 2
          column: 8
        setValue: 5
  - reasons:
      - position:
          row: 3
          column: 1
        candidates:
          - 5
    actions:
      - position:
          row: 3
          column: 1
        setValue: 5
  - reasons:
      - position:
          row: 3
          column: 5
        candidates:
          - 8
    actions:
      - position:
          row: 3
          column: 5
        setValue: 8
  - reasons:
      - position:
          row: 4
          column: 3
        candidates:
          - 5
    actions:
      - position:
          row: 4
          column: 3
        setValue: 5
  - reasons:
      - position:
          row: 4
          column: 7
        candidates:
          - 7
    actions:
      - position:
          row: 4
          column: 7
        setValue: 7
  - reasons:
      - position:
          row: 5
          column: 5
        candidates:
          - 2
    actions:
      - position:
          row: 5
          column: 5
        setValue: 2
  - reasons:
      - position:
          row: 6
          column: 0
        candidates:
          - 2
    actions:
      - position:
          row: 6
          column: 0
        setValue: 2
  - reasons:
      - position:
          row: 6
          column: 1
        candidates:
          - 8
    actions:
      - position:
          row: 6
          column: 1
        setValue: 8
  - reasons:
      - position:
          row: 6
          column: 6
        candidates:
          - 3
    actions:
      - position:
          row: 6
          column: 6
        setValue: 3
  - reasons:
      - position:
          row: 6
          column: 7
        candidates:
          - 1
    actions:
      - position:
          row: 6
          column: 7
        setValue: 1
  - reasons:
      - position:
          row: 7
          column: 4
        candidates:
          - 1
    actions:
      - position:
          row: 7
          column: 4
        setValue: 1
  - reasons:
      - position:
          row: 7
          column: 7
        candidates:
          - 8
    actions:
      - position:
          row: 7
          column: 7
        setValue: 8
  - reasons:
      - position:
          row: 8
          column: 2
        candidates:
          - 7
    actions:
      - position:
          row: 8
          column: 2
        setValue: 7
  - reasons:
      - position:
          row: 8
          column: 5
        candidates:
          - 3
    actions:
      - position:
          row: 8
          column: 5
        setValue: 3
  - reasons:
      - position:
          row: 8
          column: 6
        candidates:
          - 5
    actions:
      - position:
          row: 8
          column: 6
        setValue: 5
