sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__base_3_sample_5_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
description: Strategy HiddenSingles executed on grid base_3_sample_5_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 1   ║ 123 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║ 1 3 │ 1 3 │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │ 1   ║ 12  │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 45  ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║   6 │   6 │     ║ 4   │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │  2  │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║   3 │   3 │     ║
    - ║     │     │  2  ║  5  │  4  │     ║     │  5  │  56 ║
    - ║     │ 7 9 │     ║ 789 │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │ 456 ║
    - ║     │   9 │   9 ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c2: set value 7, because of: r0c2: candidate 7"
    - "r0c8: set value 5, because of: r0c8: candidate 5"
    - "r1c1: set value 8, because of: r1c1: candidate 8"
    - "r1c4: set value 1, because of: r1c4: candidate 1"
    - "r2c0: set value 5, because of: r2c0: candidate 5"
    - "r2c3: set value 6, because of: r2c3: candidate 6"
    - "r3c2: set value 9, because of: r3c2: candidate 9"
    - "r4c0: set value 4, because of: r4c0: candidate 4"
    - "r4c4: set value 6, because of: r4c4: candidate 6"
    - "r4c6: set value 9, because of: r4c6: candidate 9"
    - "r5c4: set value 5, because of: r5c4: candidate 5"
    - "r5c7: set value 7, because of: r5c7: candidate 7"
    - "r6c6: set value 3, because of: r6c6: candidate 3"
    - "r7c0: set value 3, because of: r7c0: candidate 3"
    - "r7c3: set value 1, because of: r7c3: candidate 1"
    - "r7c7: set value 5, because of: r7c7: candidate 5"
    - "r7c8: set value 6, because of: r7c8: candidate 6"
    - "r8c2: set value 6, because of: r8c2: candidate 6"
    - "r8c8: set value 2, because of: r8c8: candidate 2"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │     ║  23 │     │     ║ 1   │     │     ║
    - ║  9  │     │  7  ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║   3 │     │     ║     │   3 │     ║
    - ║  6  │  8  │  4  ║     │  1  │  5  ║  2  │     │  7  ║
    - ║     │     │     ║   9 │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║  6  │  7  │     ║ 4   │  8  │ 4   ║
    - ║     │     │     ║     │     │     ║     │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │     ║
    - ║  7  │  6  │  9  ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │     ║  8  │     │     ║     │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║  4  │  5  │  3  ║     │  6  │     ║  9  │     │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │     │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │  7  │  3  ║
    - ║     │     │  8  ║     │     │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║  3  │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║     │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  3  │     │  2  ║  1  │  4  │     ║     │  5  │  6  ║
    - ║     │ 7 9 │     ║     │     │ 78  ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  8  │ 4   │  6  ║  5  │     │  3  ║  7  │  1  │  2  ║
    - ║     │   9 │     ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 2
        candidates:
          - 7
    actions:
      - position:
          row: 0
          column: 2
        setValue: 7
  - reasons:
      - position:
          row: 0
          column: 8
        candidates:
          - 5
    actions:
      - position:
          row: 0
          column: 8
        setValue: 5
  - reasons:
      - position:
          row: 1
          column: 1
        candidates:
          - 8
    actions:
      - position:
          row: 1
          column: 1
        setValue: 8
  - reasons:
      - position:
          row: 1
          column: 4
        candidates:
          - 1
    actions:
      - position:
          row: 1
          column: 4
        setValue: 1
  - reasons:
      - position:
          row: 2
          column: 0
        candidates:
          - 5
    actions:
      - position:
          row: 2
          column: 0
        setValue: 5
  - reasons:
      - position:
          row: 2
          column: 3
        candidates:
          - 6
    actions:
      - position:
          row: 2
          column: 3
        setValue: 6
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 9
    actions:
      - position:
          row: 3
          column: 2
        setValue: 9
  - reasons:
      - position:
          row: 4
          column: 0
        candidates:
          - 4
    actions:
      - position:
          row: 4
          column: 0
        setValue: 4
  - reasons:
      - position:
          row: 4
          column: 4
        candidates:
          - 6
    actions:
      - position:
          row: 4
          column: 4
        setValue: 6
  - reasons:
      - position:
          row: 4
          column: 6
        candidates:
          - 9
    actions:
      - position:
          row: 4
          column: 6
        setValue: 9
  - reasons:
      - position:
          row: 5
          column: 4
        candidates:
          - 5
    actions:
      - position:
          row: 5
          column: 4
        setValue: 5
  - reasons:
      - position:
          row: 5
          column: 7
        candidates:
          - 7
    actions:
      - position:
          row: 5
          column: 7
        setValue: 7
  - reasons:
      - position:
          row: 6
          column: 6
        candidates:
          - 3
    actions:
      - position:
          row: 6
          column: 6
        setValue: 3
  - reasons:
      - position:
          row: 7
          column: 0
        candidates:
          - 3
    actions:
      - position:
          row: 7
          column: 0
        setValue: 3
  - reasons:
      - position:
          row: 7
          column: 3
        candidates:
          - 1
    actions:
      - position:
          row: 7
          column: 3
        setValue: 1
  - reasons:
      - position:
          row: 7
          column: 7
        candidates:
          - 5
    actions:
      - position:
          row: 7
          column: 7
        setValue: 5
  - reasons:
      - position:
          row: 7
          column: 8
        candidates:
          - 6
    actions:
      - position:
          row: 7
          column: 8
        setValue: 6
  - reasons:
      - position:
          row: 8
          column: 2
        candidates:
          - 6
    actions:
      - position:
          row: 8
          column: 2
        setValue: 6
  - reasons:
      - position:
          row: 8
          column: 8
        candidates:
          - 2
    actions:
      - position:
          row: 8
          column: 8
        setValue: 2
